add new controller for categories and view for creation

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -11,6 +11,8 @@
 
 hello everyone
 
-
+<a href="/goodbye"><button>Goodbye</button></a>
+<br>
+<a href="/category/new"><button>Create category</button></a>
 </body>
 </html>
