--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hello page</title>
 </head>
 <body>
 
-hello everyone
-
-<a href="/goodbye"><button>Goodbye</button></a>
-<br>
-<a href="/category/new"><button>Create category</button></a>
+<h2>Cracker market</h2>
+<table>
+    <tr>
+        <td>
+            <a href="/goodbye"><button>Goodbye</button></a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href="/category/new"><button>Create category</button></a>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
