--- a/src/main/webapp/WEB-INF/views/goodbye.html
+++ b/src/main/webapp/WEB-INF/views/goodbye.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Goodbye page</title>
 </head>
 <body>
 goodbye
