--- a/src/main/webapp/WEB-INF/views/categories/category_creator.html
+++ b/src/main/webapp/WEB-INF/views/categories/category_creator.html
@@ -32,6 +32,7 @@
                     </select>
                 </td>
             </tr>
+
            <tr>
                <td>
                    <input type="submit" value="Create category">
@@ -39,6 +40,11 @@
            </tr>
 
         </form>
+        <tr>
+            <td>
+                <a href="/parameter/new"><button>Create new parameter</button></a>
+            </td>
+        </tr>
 
     </table>
 </body>
