--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
         <td>
-            <a href="/category/new"><button>Create category</button></a>
+            <a href="/category/browser"><button>Categories</button></a>
         </td>
     </tr>
 </table>
