--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -22,6 +22,11 @@
             <a href="/category/browser"><button>Categories</button></a>
         </td>
     </tr>
+    <tr>
+        <td>
+            <a href="/users/new"><button>Register User</button></a>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
