added rest controllers for address, feedback, order changed rest controller for user changed position for address, feedback, levelAccess, LogEntity, rate, user and their DAO'S added interfaces and implementations for services
added some constructors to LogEntity

--- a/src/main/webapp/WEB-INF/views/users/user_registration.html
+++ b/src/main/webapp/WEB-INF/views/users/user_registration.html
@@ -12,7 +12,7 @@
     <!--th:method="POST" th:action="@{/users/register}"-->
 
         <H1>Registration new user</H1>
-        <form id="registerForm" name="registerForm" onsubmit="return registerUser()">
+        <form id="registerForm" name="registerForm" action="/" onsubmit="registerUser()">
 
             <table>
 
